--- a/frontend/src/pages/index.css
+++ b/frontend/src/pages/index.css
@@ -107,3 +107,16 @@ section#introduction h1::after {
 #purpose {
   margin-bottom: 120px;
 }
+
+#contact a {
+  text-decoration: none;
+  color: var(--main-text-color);
+  text-transform: uppercase;
+  font-size: 3.75rem;
+  text-align: center;
+}
+
+#contact a span {
+  color: transparent;
+  -webkit-text-stroke: 0.063rem #8980F5;
+}
