update favicon + issue section about

--- a/frontend/src/components/Scroll/scroll.css
+++ b/frontend/src/components/Scroll/scroll.css
@@ -14,3 +14,21 @@
 .scroll a {
     text-decoration: none;
 }
+
+.scroll svg,
+.scroll svg line,
+.scroll a p {
+    transition: all .25s ease-in-out;
+}
+
+.scroll:hover svg {
+    transform: scale(1.1);
+}
+
+.scroll:hover svg line {
+    stroke: var(--theme-color);
+}
+
+.scroll:hover a p {
+    color: var(--theme-color)
+}
